widget spacing & color fixes

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -10,7 +10,7 @@ body {
 
 
 h1, h2, h3, h4, h5, h6, p {
-  color:#D9E0D5;
+  color:#DBDBDB;
 }
 
 a {
@@ -154,7 +154,7 @@ a:hover, a:focus {
 }
 
 .widgets h2 {
-  margin: 7% 5%;
+  margin: 12% 5%;
   font-size: 3.8em;
   color: #E1E8DF;
   text-align: center;
@@ -164,8 +164,8 @@ a:hover, a:focus {
   background-color: transparent;
   border: 1px solid #BFC2BE;
   margin: 1.5%;
-  width: 22%;
-  height: 150px;
+  width: 97%;
+  height: 170px;
   padding: 0.5% 0;
   border-radius: 4px;
   box-shadow: 0 2px 5px rgba(35, 35, 35, .7);
@@ -192,7 +192,8 @@ a:hover, a:focus {
 .dash-heading1 {
   font-size: 1.2em;
   color: #9CA199;
-  padding-left: 5%;
+  padding: 3% 5%;
+  /*padding-left: 5%;*/
   margin-bottom: 0;
 }
 
@@ -206,7 +207,7 @@ a:hover, a:focus {
 }
 
 .sidebar h5 {
-  border-bottom: 1px solid #D9E0D5;
+  border-bottom: 1px solid #DBDBDB;
 }
 
 .gauge {
@@ -222,4 +223,14 @@ a:hover, a:focus {
   width: 100%;
   height: 110px;
 /*  border: 1px solid red;*/
+}
+
+.page-header {
+  border-bottom: 1px solid #DBDBDB;
+}
+
+#disconnect {
+  color: #DBDBDB;
+  background-color: transparent;
+  border: 1px solid #CCCCCC;
 }
